--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -5,7 +5,7 @@
     }
 
     :root {
-        --header-height: 130px;
+        --header-height: 140px;
     }
 
     .header__nav-bar-wrap-mobile {
@@ -45,28 +45,6 @@
         display: block;
     }
 
-    .header__nav-list {
-        position: fixed;
-        z-index: 1;
-        left: 0;
-        top: 0;
-        bottom: 0;
-        width: 80%;
-        background-color: var(--white-color);
-        box-shadow: 0 0 15px rgb(0 0 0 / 10%);
-        opacity: 0;
-        display: block;
-        transform: translateX(-100%);
-    }
-
-    .header__nav-item {
-        text-align: center;
-    }
-
-    .header__nav-item-link {
-        font-size: 1.8rem;
-    }
-
     .slider__decription {
         left: 71px;
     }
@@ -88,6 +66,47 @@
 
     .footer__info {
         margin-top: 20px;
+    }
+
+    .header__wrap-menu-img {
+        display: block;
+        text-align: center;
+        padding: 10px 0;
+    }
+
+    .header__wrap-menu-mobile {
+        position: fixed;
+        z-index: 1;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        display: flex;
+        flex-direction: column;
+        background: var(--white-color);
+        width: 40%;
+        box-shadow: 0px 1px 4px 1px rgb(0 0 0 / 50%);
+        transform: translateX(-100%);
+        transition: all 0.3s linear;
+        opacity: 0;
+        visibility: hidden;
+    }
+
+    .header__nav-list {
+        flex-direction: column;
+    }
+
+    .header__nav-item {
+        text-align: center;
+    }
+
+    .header__nav-item-link {
+        margin-left: 0;
+        margin-right: 0;
+        display: block;
+        font-size: 1.8rem;
+        border-top: 1px solid #ddd;
+        font-weight: 400;
+
     }
 
 }
@@ -132,10 +151,6 @@
         -webkit-tap-highlight-color: transparent;
     }
 
-    .header__nav-item-link {
-        font-size: 1.6rem;
-    }
-
     .slider__img {
         height: 280px;
         object-fit: cover;
@@ -154,14 +169,17 @@
     }
 
     .slider__decription-btn {
+        padding: 12px 20px;
         background-color: var(--white-color);
         color: var(--black-color);
+        margin-bottom: 20px;
+        display: inline-block;
     }
 
     .slider__decription {
         left: 50%;
         transform: translateX(-50%);
-        top: 120px;
+        top: 104px;
     }
 
     .page-info__phone,
@@ -248,7 +266,7 @@
     }
 
     .introduce__smart-watch {
-        margin: 0 10px;
+        margin: 20px 10px 0;
     }
 
     .introduce-img {
@@ -288,13 +306,14 @@
 
     .blog__item {
         flex-direction: column;
-        margin: 30px 10px 0;
+        margin: 40px 10px 0;
     }
 
     .blog__item-name {
         padding-left: 0;
         padding-top: 10px;
         font-size: 1.8rem;
+        line-height: 2.4rem;
     }
 
     .blog__decription {
@@ -312,11 +331,21 @@
     }
 
     .order__heading {
-        font-size: 2.4rem;
+        font-size: 3.2rem;
+        /* text-align: center; */
+        font-weight: 420;
+        line-height: 4rem;
+        letter-spacing: 4px;
     }
 
     .order__decription {
-        font-size: 1.5rem;
+        font-size: 1.8rem;
+        line-height: 3.2rem;
+        text-align: justify;
+    }
+
+    .order__name-input {
+        font-size: 1.7rem;
     }
 
     .order__select-input {
@@ -325,7 +354,7 @@
     }
 
     .order__btn {
-        padding: 12px 20px;
+        padding: 18px 20px;
         width: 100%;
         margin-left: 0;
         text-align: center;
@@ -333,12 +362,19 @@
     }
 
     .see-more__heading {
-        font-size: 2.8rem;
+        font-size: 3rem;
+        letter-spacing: 3px;
+        line-height: 4rem;
+    }
+
+    .see-more__btn {
+        font-size: 1.8rem;
     }
 
     .see-more__description {
-        font-size: 1.7rem;
-        line-height: 2.5rem;
+        font-size: 1.8rem;
+        text-align: justify;
+        line-height: 2.7rem;
         font-weight: 390;
     }
 
@@ -385,4 +421,58 @@
         font-size: 1.2rem;
         text-align: center;
     }
+
+    .header__wrap-menu-mobile {
+        width: 80%;
+    }
+
+    .home-product__price {
+        padding-bottom: 10px;
+    }
+
+    .header__nav-item-link:hover.header__nav-item-link::before {
+        display: none;
+    }
+
+    .other {
+        margin-top: 40px;
+    }
+
+    .blog {
+        margin-top: 40px;
+    }
+
+    .see-more {
+        padding: 30px 20px;
+    }
+
+    .footer__heading {
+        font-size: 2.4rem;
+        margin-bottom: 12px;
+        font-weight: 500;
+    }
+
+    .footer__description {
+        font-size: 1.8rem;
+        line-height: 2.6rem;
+
+    }
+
+    .footer__address,
+    .footer__phone,
+    .footer__mail,
+    .footer__home {
+        font-size: 1.8rem;
+        line-height: 2.6rem;
+
+    }
+
+    .footer__meta {
+        top: 40px;
+    }
+
+    .footer__meta-name {
+        text-align: left;
+    }
+
 }
