--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -842,6 +842,7 @@
     position: absolute;
     top: 31px;
     left: 0;
+    right: 0;
     display: flex;
     background: linear-gradient(to bottom, rgba(0, 0, 0, .7) 0%, rgba(0, 0, 0, 0) 100%);
     padding: 5px;
